[tool.poetry]
name = "linerlybot-rewritten"
version = "0.0.3"
description = "The new version of LinerlyBot."
authors = ["Linerly"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.2"
distro = "^1.5.0"
flask = "^2.0.1"
pyjokes = "^0.6.0"
replit = "^3.1.0"
quoters = "^0.28"
discord-py-slash-command = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
